fixed carousel alignment issue

--- a/web/src/styles/global.css
+++ b/web/src/styles/global.css
@@ -58,44 +58,63 @@ body {
 .product-section{
   display:flex;
   width:90%;
-  justify-content:space-between;
+  justify-content:space-evenly;
   flex-flow:row wrap;
 
   margin:auto;
 }
 
 .product-section > div{
+  font-weight:600;
+  white-space: 2px;
   flex: 0 0 30%;
   box-shadow:0px 1px 5px rgb(118, 3, 3);
+  background-color: rgb(118, 3, 3);
   height:300px;
   padding:10px;
   text-align:center;
-  margin:auto 0;
+  margin:50px auto;
   border-radius:15px;
   display:flex;
   flex-flow:column wrap;
   justify-content:space-evenly;
 }
 
-.product-section > div > h2{
-  
+.product-section > div:nth-child(even){
+  color:white;
+  background-color:black;
+}
+
+.product-section-title > a {
+  text-decoration: none;
+  color:rgb(30, 181, 231);
+}
+
+.product-section-title > a:hover{
+  cursor: pointer;
 }
 
 
-@media screen and (max-width:900px) {
+@media screen and (max-width:850px) {
   .homepage-container{
     margin:0;
   }
 
   .welcome-message{
-    width:80%;
-    margin:30px auto;
+    width:100%;
+    padding:0 30px;
+    margin:100px auto;
   }
 
   .product-section{
     flex-flow:column nowrap;
-    justify-content:space-betweenl;
+    justify-content:space-evenly;
     gap:20px;
     width:80%;
+  }
+
+  .product-section > div{
+    flex:0 0 auto;
+    margin:10px auto;
   }
 }
